{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 321,
  "lineage": "dca1ba30-3f61-b07b-a91e-3f3823e1efb1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06d3b5e1ed9e1d982",
            "arn": "arn:aws:ec2:us-east-1:553056723788:instance/i-0f3ef12faa7a5938f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "boyinas-dev-65787-65787-nginx_profile",
            "id": "i-0f3ef12faa7a5938f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a5ac7049880163bf",
            "private_dns": "ip-10-0-0-47.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.47",
            "public_dns": "ec2-54-147-129-100.compute-1.amazonaws.com",
            "public_ip": "54.147.129.100",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01c79cfdcffd5026a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fd58cc7ace903ee9",
            "tags": {
              "Name": "boyinas-dev-65787-web",
              "billing_code": "sandbox_001",
              "company": "Boyinas",
              "project": "Boyinas-sandbox"
            },
            "tags_all": {
              "Name": "boyinas-dev-65787-web",
              "billing_code": "sandbox_001",
              "company": "Boyinas",
              "project": "Boyinas-sandbox"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0044f640d7dd92a85"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx-sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_iam_instance_profile.nginx_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "random_integer.rand"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06d3b5e1ed9e1d982",
            "arn": "arn:aws:ec2:us-east-1:553056723788:instance/i-0afbb0ab399fb3957",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "boyinas-dev-65787-65787-nginx_profile",
            "id": "i-0afbb0ab399fb3957",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a2246e2d3a4f50f1",
            "private_dns": "ip-10-0-1-123.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.123",
            "public_dns": "ec2-54-83-67-188.compute-1.amazonaws.com",
            "public_ip": "54.83.67.188",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bb1db40e18774e4e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dabbe2f7d20a835e",
            "tags": {
              "Name": "boyinas-dev-65787-web",
              "billing_code": "sandbox_001",
              "company": "Boyinas",
              "project": "Boyinas-sandbox"
            },
            "tags_all": {
              "Name": "boyinas-dev-65787-web",
              "billing_code": "sandbox_001",
              "company": "Boyinas",
              "project": "Boyinas-sandbox"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0044f640d7dd92a85"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx-sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_iam_instance_profile.nginx_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "boyinas-dev-65787-65787",
                "enabled": true,
                "prefix": "alb-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:553056723788:loadbalancer/app/global-web-alb/616c55652a3e8211",
            "arn_suffix": "app/global-web-alb/616c55652a3e8211",
            "desync_mitigation_mode": "defensive",
            "dns_name": "global-web-alb-1838567904.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:553056723788:loadbalancer/app/global-web-alb/616c55652a3e8211",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "global-web-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-01d36ae603b227282"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0dabbe2f7d20a835e"
              },
              {
                "subnet_id": "subnet-0fd58cc7ace903ee9"
              }
            ],
            "subnets": [
              "subnet-0dabbe2f7d20a835e",
              "subnet-0fd58cc7ace903ee9"
            ],
            "tags": {
              "billing_code": "sandbox_001",
              "company": "Boyinas",
              "project": "Boyinas-sandbox"
            },
            "tags_all": {
              "billing_code": "sandbox_001",
              "company": "Boyinas",
              "project": "Boyinas-sandbox"
            },
            "vpc_id": "vpc-0cf92204a14e22a17",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginxd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:553056723788:listener/app/global-web-alb/616c55652a3e8211/9bf0def2c79fddcd",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:553056723788:targetgroup/nginx-alb-tg/9dbad9ad5e9789ea",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:553056723788:listener/app/global-web-alb/616c55652a3e8211/9bf0def2c79fddcd",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:553056723788:loadbalancer/app/global-web-alb/616c55652a3e8211",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "billing_code": "sandbox_001",
              "company": "Boyinas",
              "project": "Boyinas-sandbox"
            },
            "tags_all": {
              "billing_code": "sandbox_001",
              "company": "Boyinas",
              "project": "Boyinas-sandbox"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nginx",
            "aws_lb_target_group.nginx",
            "aws_security_group.alb_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:553056723788:targetgroup/nginx-alb-tg/9dbad9ad5e9789ea",
            "arn_suffix": "targetgroup/nginx-alb-tg/9dbad9ad5e9789ea",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:553056723788:targetgroup/nginx-alb-tg/9dbad9ad5e9789ea",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nginx-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "billing_code": "sandbox_001",
              "company": "Boyinas",
              "project": "Boyinas-sandbox"
            },
            "tags_all": {
              "billing_code": "sandbox_001",
              "company": "Boyinas",
              "project": "Boyinas-sandbox"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0cf92204a14e22a17"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:553056723788:targetgroup/nginx-alb-tg/9dbad9ad5e9789ea-20230327212225539000000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:553056723788:targetgroup/nginx-alb-tg/9dbad9ad5e9789ea",
            "target_id": "i-0f3ef12faa7a5938f"
          },
          "dependencies": [
            "aws_instance.nginx",
            "aws_lb_target_group.nginx",
            "aws_security_group.nginx-sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_iam_instance_profile.nginx_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "random_integer.rand"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:553056723788:targetgroup/nginx-alb-tg/9dbad9ad5e9789ea-20230327212225465900000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:553056723788:targetgroup/nginx-alb-tg/9dbad9ad5e9789ea",
            "target_id": "i-0afbb0ab399fb3957"
          },
          "dependencies": [
            "aws_instance.nginx",
            "aws_lb_target_group.nginx",
            "aws_security_group.nginx-sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_iam_instance_profile.nginx_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553056723788:security-group/sg-01d36ae603b227282",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01d36ae603b227282",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_alb_sg",
            "name_prefix": "",
            "owner_id": "553056723788",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "boyinas-dev-65787-vpc",
              "billing_code": "sandbox_001",
              "company": "Boyinas",
              "project": "Boyinas-sandbox"
            },
            "tags_all": {
              "Name": "boyinas-dev-65787-vpc",
              "billing_code": "sandbox_001",
              "company": "Boyinas",
              "project": "Boyinas-sandbox"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf92204a14e22a17"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553056723788:security-group/sg-0044f640d7dd92a85",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0044f640d7dd92a85",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_sg",
            "name_prefix": "",
            "owner_id": "553056723788",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "boyinas-dev-65787-vpc",
              "billing_code": "sandbox_001",
              "company": "Boyinas",
              "project": "Boyinas-sandbox"
            },
            "tags_all": {
              "Name": "boyinas-dev-65787-vpc",
              "billing_code": "sandbox_001",
              "company": "Boyinas",
              "project": "Boyinas-sandbox"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf92204a14e22a17"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553056723788:internet-gateway/igw-068093d23f45c64af",
            "id": "igw-068093d23f45c64af",
            "owner_id": "553056723788",
            "tags": {
              "Name": "boyinas-dev-65787-vpc",
              "billing_code": "sandbox_001",
              "company": "Boyinas",
              "project": "Boyinas-sandbox"
            },
            "tags_all": {
              "Name": "boyinas-dev-65787-vpc",
              "billing_code": "sandbox_001",
              "company": "Boyinas",
              "project": "Boyinas-sandbox"
            },
            "vpc_id": "vpc-0cf92204a14e22a17"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-068093d23f45c64af",
            "id": "r-rtb-04384e110f978b1341080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04384e110f978b134",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553056723788:route-table/rtb-04384e110f978b134",
            "id": "rtb-04384e110f978b134",
            "owner_id": "553056723788",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "boyinas-dev-65787-vpc",
              "billing_code": "sandbox_001",
              "company": "Boyinas",
              "project": "Boyinas-sandbox"
            },
            "tags_all": {
              "Name": "boyinas-dev-65787-vpc",
              "billing_code": "sandbox_001",
              "company": "Boyinas",
              "project": "Boyinas-sandbox"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf92204a14e22a17"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065ae525606d48f95",
            "route_table_id": "rtb-04384e110f978b134",
            "subnet_id": "subnet-0fd58cc7ace903ee9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_integer.rand"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000d8efc629362201",
            "route_table_id": "rtb-04384e110f978b134",
            "subnet_id": "subnet-0dabbe2f7d20a835e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553056723788:subnet/subnet-0fd58cc7ace903ee9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fd58cc7ace903ee9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "553056723788",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "boyinas-dev-65787-vpc",
              "billing_code": "sandbox_001",
              "company": "Boyinas",
              "project": "Boyinas-sandbox"
            },
            "tags_all": {
              "Name": "boyinas-dev-65787-vpc",
              "billing_code": "sandbox_001",
              "company": "Boyinas",
              "project": "Boyinas-sandbox"
            },
            "vpc_id": "vpc-0cf92204a14e22a17"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_integer.rand"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553056723788:subnet/subnet-0dabbe2f7d20a835e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dabbe2f7d20a835e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "553056723788",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "boyinas-dev-65787-vpc",
              "billing_code": "sandbox_001",
              "company": "Boyinas",
              "project": "Boyinas-sandbox"
            },
            "tags_all": {
              "Name": "boyinas-dev-65787-vpc",
              "billing_code": "sandbox_001",
              "company": "Boyinas",
              "project": "Boyinas-sandbox"
            },
            "vpc_id": "vpc-0cf92204a14e22a17"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553056723788:vpc/vpc-0cf92204a14e22a17",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06290bed3a335d19c",
            "default_route_table_id": "rtb-084387f1da94653bf",
            "default_security_group_id": "sg-06070ede2feb552fd",
            "dhcp_options_id": "dopt-08b664646615a0775",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cf92204a14e22a17",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-084387f1da94653bf",
            "owner_id": "553056723788",
            "tags": {
              "Name": "boyinas-dev-65787-vpc",
              "billing_code": "sandbox_001",
              "company": "Boyinas",
              "project": "Boyinas-sandbox"
            },
            "tags_all": {
              "Name": "boyinas-dev-65787-vpc",
              "billing_code": "sandbox_001",
              "company": "Boyinas",
              "project": "Boyinas-sandbox"
            }
          },
          "dependencies": [
            "random_integer.rand"
          ]
        }
      ]
    }
  ]
}